--- a/index.html
+++ b/index.html
@@ -2,9 +2,9 @@
 <html lang="es">
   <head>
     <meta charset="UTF-8" />
-    <link rel="icon" type="image/png" href="/logo-aire.png" />
+    <link rel="icon" type="image/png" href="/logo-aire-intervenida.png" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <title>Air-e | Gestión de Cable-Operadores y Contratos</title>
+    <title>Air-e | Gestión de CableOperadores y Contratos</title>
   </head>
   <body>
     <div id="root"></div>
