--- a/index.html
+++ b/index.html
@@ -3,11 +3,14 @@
   <head>
     <meta charset="UTF-8" />
     <link rel="icon" type="image/png" href="/logo-aire-intervenida.png" />
-    <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <title>Air-e | Gestión de CableOperadores y Contratos</title>
+    <meta name="viewport" content="width=device-width, initial-scale=1.0, maximum-scale=5.0, user-scalable=yes" />
+    <meta name="color-scheme" content="light dark" />
+    <meta name="theme-color" content="#1e40af" />
+    <meta name="description" content="AIR-E: Plataforma integral de gestión de cable-operadores, contratos, facturas y proyectos" />
+    <title>AIR-E | Gestión de CableOperadores y Contratos</title>
   </head>
-  <body>
-    <div id="root"></div>
+  <body class="antialiased">
+    <div id="root" class="w-full min-h-screen"></div>
     <script type="module" src="/src/main.jsx"></script>
   </body>
 </html>
